Bug 240104 - New transaction not created when clicking tab in ledger view
Summary: New transaction not created when clicking tab in ledger view
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-30 17:49 UTC by Brian
Modified: 2010-05-31 14:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brian 2010-05-30 17:49:14 UTC
Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

In the ledger view, clicking on a Payment/Transfer/Charge tab will not always create a new transaction  If you click on the tab which matches the displayed transaction a new transaction will not be created.  If you select a tab that is different than the displayed transaction, a new transaction is created.  For example, if you open a ledger and the selected transaction is a Charge, clicking the Charge tab on that transaction will not create a new transaction.

Reproducible: Always

Steps to Reproduce:
Open ledger view.  
In the transaction shown, click on the tab that represents the same type of transaction as the loaded transaction.  
No new transaction is created
Click on a tab that is NOT of the same type as the shown transaction and new transaction is created. 

Actual Results:  
A new transaction is not created

Expected Results:  
A new transaction of the tab type indicated should be created

This is a bug
Comment 1 Thomas Baumgart 2010-05-31 14:38:26 UTC
SVN commit 1132794 by tbaumgart:

Changed base class of tab bar in transaction from from KTabWidget to KTabBar

BUG: 240104

 M  +19 -7     dialogs/transactioneditor.cpp  
 M  +1 -0      dialogs/transactioneditor.h  
 M  +72 -80    widgets/transactionform.cpp  
 M  +16 -12    widgets/transactionform.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132794