Changed base class of tab bar in transaction from from KTabWidget to KTabBar

BUG: 240104

svn path=/trunk/kdereview/kmymoney/; revision=1132794